--- a/config/src/main/resources/config/application-dev.properties
+++ b/config/src/main/resources/config/application-dev.properties
@@ -1,8 +1,8 @@
-spring.datasource.ip=59.173.19.66
-spring.datasource.port=15432
-spring.datasource.database=dscdb
+spring.datasource.ip=XX.XX.XX.XX
+spring.datasource.port=XXXX
+spring.datasource.database=XXX
 
-spring.username=smart
-spring.password=smart@123
+spring.username=XXXX
+spring.password=XXXX
 
 eureka.instance.hostname=127.0.0.1
